
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u64 ;
typedef int u32 ;
struct si_power_info {scalar_t__ fan_is_controlled_by_smc; } ;
struct TYPE_2__ {scalar_t__ no_fan; } ;
struct radeon_device {TYPE_1__ pm; } ;


 int CG_FDO_CTRL0 ;
 int CG_FDO_CTRL1 ;
 int EINVAL ;
 int ENOENT ;
 int FDO_STATIC_DUTY (int) ;
 int FDO_STATIC_DUTY_MASK ;
 int FMAX_DUTY100_MASK ;
 int FMAX_DUTY100_SHIFT ;
 int RREG32 (int ) ;
 int WREG32 (int ,int) ;
 int do_div (int,int) ;
 struct si_power_info* si_get_pi (struct radeon_device*) ;

int si_fan_ctrl_set_fan_speed_percent(struct radeon_device *rdev,
          u32 speed)
{
 struct si_power_info *si_pi = si_get_pi(rdev);
 u32 tmp;
 u32 duty, duty100;
 u64 tmp64;

 if (rdev->pm.no_fan)
  return -ENOENT;

 if (si_pi->fan_is_controlled_by_smc)
  return -EINVAL;

 if (speed > 100)
  return -EINVAL;

 duty100 = (RREG32(CG_FDO_CTRL1) & FMAX_DUTY100_MASK) >> FMAX_DUTY100_SHIFT;

 if (duty100 == 0)
  return -EINVAL;

 tmp64 = (u64)speed * duty100;
 do_div(tmp64, 100);
 duty = (u32)tmp64;

 tmp = RREG32(CG_FDO_CTRL0) & ~FDO_STATIC_DUTY_MASK;
 tmp |= FDO_STATIC_DUTY(duty);
 WREG32(CG_FDO_CTRL0, tmp);

 return 0;
}
